--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -1,14 +1,12 @@
-# GitHub Actions workflow to build and deploy a Node.js app to Azure Web App
-
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: money-exchange    # Set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'       # Set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '20.x'                 # Node.js version to use
+  AZURE_WEBAPP_NAME: money-exchange
+  AZURE_WEBAPP_PACKAGE_PATH: '.'
+  NODE_VERSION: '20.x'
 
 permissions:
   contents: read
@@ -35,7 +33,7 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: Install dependencies
-      run: npm install
+      run: npm install --no-package-lock
 
     - name: Run ESLint
       run: npm run lint --if-present
@@ -58,7 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'  # Adjust to match your actual environment
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
